tests/transpiler/x/fs/slice.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/transpiler/x/fs/slice.fs(4,33): error FS0039: The field, constructor or member 'Substring' is not defined

/workspace/mochi/tests/transpiler/x/fs/slice.fs(5,33): error FS0039: The field, constructor or member 'Substring' is not defined
