tests/transpiler/x/fs/slice.fs
// Mochi 0.10.31 - generated 2025-07-19 14:22:52 UTC
open System

printfn "%s" (string ([1; 2; 3].Substring(1, 3 - 1)))
printfn "%s" (string ([1; 2; 3].Substring(0, 2 - 0)))
printfn "%s" (string ("hello".Substring(1, 4 - 1)))
